--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha **/*.test.js",
+    "test": "mocha **/*.test.js ./*.test.js",
     "start": "node server.js",
     "test-watch": "nodemon --exec \"npm test\""
   },
@@ -14,6 +14,8 @@
     "expect": "^1.20.2",
     "express": "^4.16.3",
     "hbs": "^4.0.1",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "rewire": "^4.0.1",
+    "supertest": "^3.1.0"
   }
 }
